# My_OOP

Laboratory_1/: CMakeProject2.cpp  CMakeProject2.h
Laboratory_2/: CMakeLists.txt  Laboratory_2.cpp  Laboratory_2.h  Lesson_2a.cpp  Lesson_2a.h  circ_buf.cpp  circ_buf.h
Task_1/: CMakeLists.txt  graphic.h  hometask_env.cpp  hometask_env.h  task_1.cpp  task_1.h
Task_2/: CMakeLists.txt  hometasks.cpp  hometasks.h
Task_3/: CMakeLists.txt  rational.cpp  rational.h  rational_new.cpp  task_3.cpp  task_3.h
Task_4/: task_4.cpp  task_4.h
